[gd_scene load_steps=4 format=2]

[ext_resource path="res://JacksSet.gd" type="Script" id=1]
[ext_resource path="res://Jack.tscn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.659569, 0.757907, 0.710629 )

[node name="JacksSet" type="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.21147, 0 )
script = ExtResource( 1 )

[node name="Jack" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 0.975238, -0.221156, 0, 0.221156, 0.975238, 0, 0, 0 )

[node name="Jack2" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.935396, 0.353601, 0, -0.353601, 0.935396, 0, 0, 0, 1, -0.393543, -0.0059166, -0.00285172 )

[node name="Jack3" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.891382, -0.453254, 0, 0.453254, 0.891382, 0, 0, 0, 1, 0.359048, 0.0682608, 0 )

[node name="Jack4" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.982118, -0.0206919, 0.187124, 0, 0.993942, 0.109909, -0.188265, -0.107943, 0.976168, 0, 0, 0.440958 )

[node name="Jack5" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.28584, 0 )

[node name="Jack6" parent="." instance=ExtResource( 2 )]
transform = Transform( -0.908834, 0.415076, 0.041626, -0.417158, -0.904298, -0.0906878, 0, -0.0997848, 0.995009, 0.0550785, -0.0596204, -0.427962 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.458053, 0 )
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_JacksSet_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_JacksSet_body_exited"]
[connection signal="jack_free" from="." to="." method="_on_JacksSet_jack_free"]
